syntax = "proto3";

package pb;

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginResponse{
    string accessToken = 1;
}

message RegisterRequest{
    string username = 1;
    string password = 2;
    string role = 3;
}

message RegisterResponse{
    string username = 1;
}

service AuthService{
    rpc Register(RegisterRequest) returns (RegisterResponse){};
    rpc Login(LoginRequest) returns (LoginResponse){};
}